# easey

./: README.md  easey.py  movielens_example.ipynb  pyproject.toml
easey/: __init__.py  easey.py
