[project]
name = "easey"
version = "0.2.0"
authors = [
  { name="George Brown", email="gcbrown@pm.me" },
]
description = "An implementation of Embarrassingly Shallow Autoencoders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.14",
    "sparse-dot-mkl>=0.9",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/gcbrown/easey"
Issues = "https://github.com/gcbrown/easey/issues"

[tool.ruff]
line-length = 100
target-version = 'py314'

[tool.ruff.lint]
select = ['ALL']
# naming, single quotes
ignore = ['N80', 'Q000']

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.format]
quote-style = 'single'
skip-magic-trailing-comma = true
