[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "easey"
version = "0.3.0"
authors = [
  { name="George Brown", email="gcbrown@pm.me" },
]
description = "An implementation of Embarrassingly Shallow Autoencoders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.14",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
mkl = ["sparse-dot-mkl>=0.9"]

[project.urls]
Homepage = "https://github.com/gcbrown/easey"
Issues = "https://github.com/gcbrown/easey/issues"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100
target-version = 'py314'

[tool.ruff.lint]
select = ['ALL']
# naming, single quotes
ignore = ['N80', 'Q000']

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.format]
quote-style = 'single'
skip-magic-trailing-comma = true
